# notion-mcp

./: README.md  pyproject.toml
src/notion_mcp/: client.py  server.py
src/notion_mcp/models/: notion.py
